# pysparky-vector

./: .gitignore  README.md  example.py  pyproject.toml
pysparky_vector/: __init__.py
pysparky_vector/core/: vector_ops.py
pysparky_vector/metrics/: distance.py  registry.py  similarity.py
tests/: conftest.py  test_metrics.py  test_vector_ops.py
